# bmkg-soetta

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bmkg-soetta.cpp  bmkg-soetta.h
RadarWorker/: CMakeLists.txt  img.cpp  img.hpp  main.cpp  map.cpp  map.hpp  png.cpp  png.hpp  processor.cpp  processor.hpp  radar.cpp  radar.hpp  request.cpp  request.hpp
discord/: CMakeLists.txt  command.hpp  command_manager.cpp  command_manager.hpp  main.cpp
discord/commands/: render.cpp  render.hpp
include/radar_debug/: debug.h
include/radarworker/: fetch.hpp  map.hpp  radar.hpp  radarworker.hpp
radarworker/: CMakeLists.txt  fetch.cpp  main.cpp  map.cpp  png.cpp  radar.cpp  radarworker.pc.in
